HeroBanner update and new folder for link Sanity added

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,3 +13,29 @@
   margin: 40px 0px;
   color: #324d67;
 }
+.hero-banner-container .beats-solo {
+  font-size: 20px;
+}
+.hero-banner-container button {
+  border-radius: 15px;
+  padding: 10px 16px;
+  background-color: #f02d34;
+  color: white;
+  border: none;
+  margin-top: 40px;
+  font-size: 18px;
+  font-weight: 500;
+  cursor: pointer;
+  z-index: 10000 !important;
+}
+
+.hero-banner-container h3 {
+  font-size: 4rem;
+  margin-top: 4px;
+}
+.hero-banner-container h1 {
+  color: white;
+  font-size: 10em;
+  margin-left: -20px;
+  text-transform: uppercase;
+}
