--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,6 +13,15 @@
   margin: 40px 0px;
   color: #324d67;
 }
+.hero-banner-container {
+  padding: 100px 40px;
+  background-color: #dcdcdc;
+  border-radius: 15px;
+  position: relative;
+  height: 500px;
+  line-height: 0.9;
+  width: 100%;
+}
 .hero-banner-container .beats-solo {
   font-size: 20px;
 }
@@ -38,4 +47,22 @@
   font-size: 10em;
   margin-left: -20px;
   text-transform: uppercase;
+}
+.hero-banner-image {
+  position: absolute;
+  top: 0%;
+  right: 20%;
+  width: 450px;
+  height: 450px;
+}
+
+.desc {
+  position: absolute;
+  right: 10%;
+  bottom: 5%;
+  width: 300px;
+  line-height: 1.3;
+  display: flex;
+  flex-direction: column;
+  color: #324d67;
 }
